# cpp-soraxas_toolbox

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CSVWriter.h  LICENSE  License  Makefile  colour.h  soraxas_cpp_toolbox.h  test.cpp
include/: CSVWriter.h  eigen_helpers.h  soraxas_cpp_toolbox.h
include/soraxas_cpp_toolbox/: CSVWriter.h  SimpleCSVWriter.h  batched_autodiff.hpp  cpp2py_plotly_helpers.h  eigen_helpers.h  future.h  globals.h  main.h  stats.h
include/soraxas_toolbox/: SimpleCSVWriter.h  assert.h  batched_autodiff.hpp  clock.h  colour.h  compile_time_dict.h  compile_time_string.h  cpp2py_plotly_helpers.h  debug_logger.h  eigen_helpers.h  eigen_math.h  format.h  forward_declare.h  future.h  globals.h  main.h  metaprogramming.h  path.h  print_utils.h  print_utils_core.h  simple_logger.h  simple_sockets.h  stats.h  string.h  string_from_stuff.h  timer.h  vector_math.h  xtensor_utils.h
include/soraxas_toolbox/cereal/: construct_or_load.h  eigen.h  serialisable_stream.h  xtensor.h
include/soraxas_toolbox/stats/: cuda_timer.h  timer.h  timer_interface.h  timing.h  token.h
tests/: CMakeLists.txt  tests_runner.cpp
